fix(core): form control alignment and icon
- fix vertical alignment for inline type controls
- add icon side demos

--- a/src/forms/control-group/control-group.css
+++ b/src/forms/control-group/control-group.css
@@ -14,6 +14,11 @@
   --color: var(--nve-sys-text-muted-color);
 }
 
+:host([layout*='horizontal-inline']) ::slotted([nve-control]),
+:host([layout*='vertical-inline']) ::slotted([nve-control]) {
+  --control-height: var(--nve-ref-size-800);
+}
+
 slot[name='label'] {
   grid-area: label;
   display: block;
@@ -29,7 +34,7 @@ slot[name='messages'] {
   grid-area: input;
   display: flex;
   flex-direction: column;
-  gap: 4px 16px;
+  gap: var(--nve-ref-size-300) var(--nve-ref-size-400);
   width: fit-content;
   flex-wrap: wrap;
 }
